Provide a way for a program to find out if calibration is enabled

Also, do this without exposing internal parts of GcmCalibrateArgyll to the clients.

Resolves: https://bugzilla.gnome.org/show_bug.cgi?id=672028